# hamilton_feature_catalog

./: .gitignore  Hamilton Feature Catalog.ipynb  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: special_customers.csv  transactions_sample.csv
features/: transaction_features.py
raw/: special_customers.py  transactions.py
src/hamilton_feature_catalog/: cache.py  config.py  main.py  utils.py
src/hamilton_feature_catalog/features/: transaction_features.py
src/hamilton_feature_catalog/raw/: special_customers.py  transactions.py
tests/: conftest.py  test_cache.py  test_expectations.py  test_main.py  test_utils.py
